feat: finalize
