# server/src/middleware/__generated__/swagger.json
@@ -265,7 +265,7 @@
 		"contact": {}
 	},
 	"paths": {
-		"/users": {
+		"/user": {
 			"get": {
 				"operationId": "GetAllUsers",
 				"responses": {
@@ -287,7 +287,7 @@
 				"parameters": []
 			}
 		},
-		"/users/reagents": {
+		"/user/reagents": {
 			"get": {
 				"operationId": "GetReagents",
 				"responses": {
@@ -327,12 +327,12 @@
 				]
 			}
 		},
-		"/users/reagent/{id}": {
+		"/user/reagent/{id}": {
 			"get": {
 				"operationId": "GetReagentById",
 				"responses": {
 					"200": {
-						"description": "All reagents returned successfully",
+						"description": "reagent returned successfully",
 						"content": {
 							"application/json": {
 								"schema": {
@@ -364,6 +364,135 @@
 						}
 					}
 				]
+			},
+			"post": {
+				"operationId": "CreateReagent",
+				"responses": {
+					"201": {
+						"description": "Reagent created successfully",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Reagent"
+								}
+							}
+						}
+					}
+				},
+				"description": "Create a reagent by its ID.\r\nUser **must** be authenticated to access this endpoint",
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": [
+					{
+						"description": "- The ID of the new reagent being created.",
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"description": "- the request object containing the data of the reagent (id generated by db)",
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateReagentRequest",
+								"description": "- the request object containing the data of the reagent (id generated by db)"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/user/reagent/delete/{id}": {
+			"delete": {
+				"operationId": "DeleteReagentById",
+				"responses": {
+					"200": {
+						"description": "reagent deleted successfully",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/Reagent"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"description": "Delete a reagent by using its ID\r\nUser **must** be authenticated to access this endpoint",
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": [
+					{
+						"description": "- The ID of the reagent to delete",
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/user/reagent/update/{id}": {
+			"patch": {
+				"operationId": "UpdateReagent",
+				"responses": {
+					"200": {
+						"description": "Reagent updated successfully",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Reagent"
+								}
+							}
+						}
+					}
+				},
+				"description": "Update a reagent by its ID.\r\nUser **must** be authenticated to access this endpoint",
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": [
+					{
+						"description": "- The ID of the reagent to update.",
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"description": "- The updated reagent data (partial fields allowed)",
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/Partial_Reagent_",
+								"description": "- The updated reagent data (partial fields allowed)"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/reagents": {
